@@ -104,7 +104,7 @@ nasl/md4.[c|h]: GPLv2+
 nasl/md5.[c|h]: Public Domain
 nasl/nasl.[c|h]: GPLv2
 nasl/nasl_builtin_find_service.c: GPLv2
-nasl/nasl_builtin_nmap.c: GPLv2
+nasl/nasl_builtin_nmap.c: GPLv2+
 nasl/nasl_builtin_openvas_tcp_scanner.c: GPLv2
 nasl/nasl_builtin_plugins.h: GPLv2+
 nasl/nasl_builtin_synscan.c: GPLv2
