@@ -1,3 +1,8 @@
+2013-03-06  Henri Doreau <henri.doreau@greenbone.net>
+
+	* nasl/nasl_builtin_nmap.c: Changed license from GPLv2 to GPLv2+
+	copyrighted by Greenbone.
+
 2013-03-05  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* misc/plugutils.c (plugin_is_newstyle): New function.
